--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,38 +2,67 @@
     ViewData["Title"] = "Home Page";
 }
 
-@model IQueryable<BLP>
+@*@model IQueryable<BLP>*@
+@*Below works because we have "@using BookList.Models.ViewModels" in ViewImports.cshtml already
+*@
 
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+@model ProjectListViewModel
 
-<h2>Chen-Han's List <span class="badge badge-pill badge-secondary">New</span></h2>
+
+<div class="text-center font-weight-bold">
+    <h2>Chen-Han's List <span class="badge badge-pill badge-secondary bg-info">New</span></h2>
+
+</div>
+<br />
 @*use a foreach loop to show each data from the database in the view
 *@
-@foreach (var i in Model)
+@foreach (var i in Model.BLPs)
 {
-    <div class="card card-outline-primary m-1 p-1">
-        <div class="bg-faded p-1">
-            <h4>
-                @i.Title
-                <span class="badge badge-pill" style="float:right">
-                    <button class="btn btn-outline-dark badge badge-pill">
-                        <large>Buy with 1-Click @i.Price.ToString("c")</large>
-                    </button>
-                </span>
-            </h4>
-        </div>
-        <div>
-@*            <div class="card-text p-1">@i.BookId</div>*@
-            <div class="card-text p-1">By @i.AuthorFirstName, @i.AuthorLastName</div>
-            <div class="card-text p-1">Publisher: @i.Publisher</div>
-            <div class="card-text p-1">Category 1: @i.Category1</div>
-            <div class="card-text p-1">Category 2: @i.Category2</div>
-            <div class="card-text p-1">@i.ISBN</div>
+<div class="card card-outline-primary m-1 p-1" style="width:650px">
+    <div class="card-body bg-faded p-1">
+        <h4>
+            @i.Title
+            <span class="badge badge-pill" style="float:right">
+                <button class="btn btn-outline-dark badge badge-pill">
+                    <large>Buy with 1-Click @i.Price.ToString("c")</large>
+                </button>
+            </span>
+        </h4>
+    </div>
+
+
+    <div class="card-header">
+        Rank #@i.BookId
+    </div>
+
+    <div class="container">
+        <div class="row justify-content-evenly">
+            <div class="card border-light col-6">
+                <div class="card-text p-1">By @i.AuthorFirstName, @i.AuthorLastName</div>
+                <div class="card-text p-1">Publisher: @i.Publisher</div>
+                <div class="card-text p-1">Category 1: @i.Category1</div>
+                <div class="card-text p-1">Category 2: @i.Category2</div>
+                <div class="card-text p-1">@i.ISBN</div>
+            </div>
+
+            <div class="card border-light col-6">
+                @*<img src="@("~/img/" + i.BookId + ".png")" class="card-img-top" alt="Image">*@
+@*                <img src="~/img/1.png" class="card-img-top" alt="Image">
+*@                <img src="~/img/@(i.BookId).jpg" alt="Book Image" />
+            </div>
         </div>
     </div>
+    <div class="card-footer text-muted">
+        @i.PageNum Pages
+    </div>
+</div>
 }
+<br />
+<div class="text-center">
+    <div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true" page-class="btn"
+         page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group" pull-right m-1></div>
+</div>
+
 
 @*Notes*@
 <!------ Include the above in your HEAD tag ---------->
