--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,18 +6,49 @@
     <meta name="viewport" content="width=device-width" />
     <title>SportsStore</title>
     <link href="/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link href="/css/site.css" rel="stylesheet" />
 </head>
-<body class="justify-content-center;" style="width: 100%; margin: 0 auto;">
-    <div class="bg-dark text-white p-2 d-flex justify-content-center" align="center">
-        <span class="navbar-brand ml-2">ザ・スーパーゴールデンブックリスト</span>
+
+<body class="">
+    <header>
+        <div class="content">
+        </div>
+    </header>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">BookList</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" asp-action="Index">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" asp-action="Video">Video</a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="bg-light text-dark p-2 d-flex justify-content-center" align="center">
+        <span class="ml-2">ザ・スーパーゴールデンブックリスト</span>
     </div>
     <br />
     <br />
+
     <div class="d-flex justify-content-center">
         <div class="justify-content-center;">
-@*            Put the body content HERE
-*@            @RenderBody()
+            @*            Put the body content HERE
+            *@            @RenderBody()
         </div>
     </div>
+    
+    <script src="~/js/site.js"></script>
 </body>
 </html>
