--- a/Views/Home/Video.cshtml
+++ b/Views/Home/Video.cshtml
@@ -10,4 +10,4 @@
 
 <div class="ratio ratio-2x1">
     <iframe src="https://www.youtube.com/watch?v=QoNx1P6nMoU&list=RDQoNx1P6nMoU&start_radio=1" title="V" allowfullscreen></iframe>
-</d
+</div>
