--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,81 +7,65 @@
 *@
 
 @model ProjectListViewModel
-
-
-<div class="text-center font-weight-bold">
-    <h2>Chen-Han's List <span class="badge badge-pill badge-secondary bg-info">New</span></h2>
-
+<div class="row justify-content-center">
+    <div class="col-auto mb-1">
+        <div class="card">
+            <div class="text-center font-weight-bold">
+                <h2 class="card-title">Chen-Han's List <span class="badge badge-pill badge-secondary bg-info">New</span></h2>
+            </div>
+        </div>
+    </div>
 </div>
+
+
 <br />
 @*use a foreach loop to show each data from the database in the view
 *@
 @foreach (var i in Model.BLPs)
 {
-<div class="card card-outline-primary m-1 p-1" style="width:650px">
-    <div class="card-body bg-faded p-1">
-        <h4>
-            @i.Title
-            <span class="badge badge-pill" style="float:right">
-                <button class="btn btn-outline-dark badge badge-pill">
-                    <large>Buy with 1-Click @i.Price.ToString("c")</large>
-                </button>
-            </span>
-        </h4>
-    </div>
+    <div class="card card-outline-primary m-1 p-1" style="width:600px">
+        <div class="card-body bg-faded p-1">
+            <h4>
+                @i.Title
+                <span class="badge badge-pill" style="float:right">
+                    <button class="btn btn-outline-dark badge badge-pill">
+                        <large>Buy with 1-Click @i.Price.ToString("c")</large>
+                    </button>
+                </span>
+            </h4>
+        </div>
 
 
-    <div class="card-header">
-        Rank #@i.BookId
-    </div>
+        <div class="card-header">
+            Rank #@i.BookId
+        </div>
 
-    <div class="container">
-        <div class="row justify-content-evenly">
-            <div class="card border-light col-6">
-                <div class="card-text p-1">By @i.AuthorFirstName, @i.AuthorLastName</div>
-                <div class="card-text p-1">Publisher: @i.Publisher</div>
-                <div class="card-text p-1">Category 1: @i.Category1</div>
-                <div class="card-text p-1">Category 2: @i.Category2</div>
-                <div class="card-text p-1">@i.ISBN</div>
-            </div>
+        <div class="container">
+            <div class="row justify-content-evenly">
+                <div class="card border-light col-6">
+                    <div class="card-text p-1">By @i.AuthorFirstName, @i.AuthorLastName</div>
+                    <div class="card-text p-1">Publisher: @i.Publisher</div>
+                    <div class="card-text p-1">Category 1: @i.Category1</div>
+                    <div class="card-text p-1">Category 2: @i.Category2</div>
+                    <div class="card-text p-1">@i.ISBN</div>
+                </div>
 
-            <div class="card border-light col-6">
-                @*<img src="@("~/img/" + i.BookId + ".png")" class="card-img-top" alt="Image">*@
-@*                <img src="~/img/1.png" class="card-img-top" alt="Image">
-*@                <img src="~/img/@(i.BookId).jpg" alt="Book Image" />
+                <div class="card border-light col-6">
+                    @*<img src="@("~/img/" + i.BookId + ".png")" class="card-img-top" alt="Image">*@
+                    @*                <img src="~/img/1.png" class="card-img-top" alt="Image">
+                    *@                <img src="~/img/@(i.BookId).jpg" alt="Book Image" />
+                </div>
             </div>
         </div>
+        <div class="card-footer text-muted">
+            @i.PageNum Pages
+        </div>
     </div>
-    <div class="card-footer text-muted">
-        @i.PageNum Pages
-    </div>
-</div>
+    <br />
 }
 <br />
-<div class="text-center">
+
+<div class="text-center font-weight-bolder">
     <div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true" page-class="btn"
-         page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group" pull-right m-1></div>
+         page-class-normal="btn-outline-dark" page-class-selected="btn-success" class="btn-group" pull-right m-1></div>
 </div>
-
-
-@*Notes*@
-<!------ Include the above in your HEAD tag ---------->
-@*
-    <nav class="navbar navbar-icon-top navbar-expand-lg navbar-dark bg-dark">
-
-        <a class="navbar-brand" href="#">Chen-Han's List</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">
-                        <i class="fa fa-home"></i>
-                        Home
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-        </div>
-    </nav>*@
