--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
 @*Below works because we have "@using BookList.Models.ViewModels" in ViewImports.cshtml already
 *@
 
+@*card header with shared title in each book list page*@
 @model ProjectListViewModel
 <div class="row justify-content-center">
     <div class="col-auto mb-1">
@@ -35,8 +36,8 @@
             </h4>
         </div>
 
-
-        <div class="card-header">
+@*Added the Primary key of the table "BookId"
+*@        <div class="card-header">
             Rank #@i.BookId
         </div>
 
@@ -53,18 +54,22 @@
                 <div class="card border-light col-6">
                     @*<img src="@("~/img/" + i.BookId + ".png")" class="card-img-top" alt="Image">*@
                     @*                <img src="~/img/1.png" class="card-img-top" alt="Image">
+
+        Combine the img src with the PK to dynamically display each image for each book 
                     *@                <img src="~/img/@(i.BookId).jpg" alt="Book Image" />
                 </div>
             </div>
         </div>
-        <div class="card-footer text-muted">
+@*        Display the total number of pages in each book
+*@        <div class="card-footer text-muted">
             @i.PageNum Pages
         </div>
     </div>
     <br />
 }
 <br />
-
+@*Display the current page and change the color when hover over other pages 
+*@
 <div class="text-center font-weight-bolder">
     <div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true" page-class="btn"
          page-class-normal="btn-outline-dark" page-class-selected="btn-success" class="btn-group" pull-right m-1></div>
