--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,8 @@
         </div>
     </header>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+@*    Navigation bar 
+*@    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">BookList</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,8 +36,8 @@
             </div>
         </div>
     </nav>
-
-    <div class="bg-light text-dark p-2 d-flex justify-content-center" align="center">
+@*    Shared title 
+*@  <div class="bg-light text-dark p-2 d-flex justify-content-center" align="center">
         <span class="ml-2">ザ・スーパーゴールデンブックリスト</span>
     </div>
     <br />
