--- a/Views/Shared/BLPSummary.cshtml
+++ b/Views/Shared/BLPSummary.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BLP
 
-<div class="card card-outline-primary m-1 p-1" style="width:600px">
+<div class="card card-outline-primary m-1 p-1" style="width:500px; padding-left:50px;">
     <div class="card-body bg-faded p-1">
         <h4>
             @Model.Title
@@ -10,10 +10,22 @@
                 </button>
             </span>
         </h4>
+
+        <form id="@Model.BookId" asp-page="/Shopping" method="post">
+            <input type="hidden" asp-for="BookId" />
+            <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+            <span class="card-text p-1">
+                <button type="submit" class="btn-success btn-sm pull-right" style="float:right; margin-right:20px">
+                    Add Cart
+                </button>
+            </span>
+        </form>
+        
     </div>
 
     @*Added the Primary key of the table "BookId"
-    *@        <div class="card-header">
+    *@        
+    <div class="card-header">
         Rank #@Model.BookId
     </div>
 
