--- a/Views/Shared/Components/NavigationMenuViewComponents/Default.cshtml
+++ b/Views/Shared/Components/NavigationMenuViewComponents/Default.cshtml
@@ -13,7 +13,7 @@ asp-route-category="">
     <a class="btn btn-block @(category == ViewBag.SelectedType ? "btn-primary" : "btn-outline-secondary")"
        asp-action="Index" asp-controller="Home"
        asp-route-category="@category"
-       asp-route-page="1">
+       asp-route-pageNum="1">
         @category
     </a>
 } 
