--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,27 +8,33 @@
     <link href="/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link href="~/css/site.css" rel="stylesheet" />
+@*    Add the Font-Awesome package*@   
+    <link href="/lib/font-awesome/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
+
 @*    Navigation bar 
 *@    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">BookList</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+          <div class="container-fluid">
+              <a class="navbar-brand" href="#">BookList</a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
 
-            <div class="collapse navbar-collapse" id="menu">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" asp-action="Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-action="Video">Video</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+              <div class="collapse navbar-collapse" id="menu">
+                  <ul class="navbar-nav ml-auto">
+                      <li class="nav-item">
+                          <a class="nav-link active" asp-action="Index">Home</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" asp-action="Video">Video</a>
+                      </li>
+                  </ul>
+              </div>
+              <div class="col-6 text-right">
+                  <vc:cart-summary />
+              </div>
+          </div>
       </nav>
 
       <div class="row">
