--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using BookList
 @using BookList.Models
 @using BookList.Models.ViewModels
+@using BookList.Infrastructure 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, BookList
