--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,8 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-6 text-right">
+@*            Adding the cart-summary here
+*@            <div class="col-6 text-right">
                 <vc:cart-summary />
             </div>
         </div>
